* Now we should also support link layer and INADDR_BROADCAST broadcasts again   correctly. * This should finally fix ticket #6454, but I keep it open until it's confirmed.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38365 a95241bf-73f2-0310-859d-f6bbb57e9c96